# docs/api/openapi.yaml
@@ -156,29 +156,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /auth/token/info:
-    get:
-      summary: Get token info
-      description: Get information about current token
-      operationId: getTokenInfo
-      tags:
-        - Tokens
-      security:
-        - bearerAuth: []
-      responses:
-        '200':
-          description: Token information
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TokenInfo'
-        '401':
-          description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-
   /auth/me:
     get:
       summary: Get current user
@@ -303,18 +280,6 @@ components:
           type: boolean
         user:
           $ref: '#/components/schemas/User'
-
-    TokenInfo:
-      type: object
-      properties:
-        userId:
-          type: string
-        expiresAt:
-          type: string
-          format: date-time
-        lastActivityAt:
-          type: string
-          format: date-time
 
     User:
       type: object
